@@ -3,6 +3,10 @@
 	* gmp-impl.h (mpn_sublsh1_n_ip1): Declare.
 	* mpn/generic/toom_interpolate_5pts.c: Use mpn_sublsh1_n_ip1.
 
+	* tests/devel/try.c: Tests for {add,sub}lsh*_n_ip[12].
+	* tests/refmpn.c: New reference for mpn_{add,sub}lsh*_n_ip[12].
+	* tests/tests.h: Declarations for reference functions above.
+
 2011-03-10  Marc Glisse  <marc.glisse@inria.fr>
 
 	* tests/cxx/t-istream.cc: Explicit conversion to streampos.
